# swagger_server/controllers/logbook_controller.py
@@ -1,7 +1,8 @@
 from json import JSONEncoder
+import os
 from timeit import default_timer
 import connexion
-from flask import jsonify, request
+from flask import jsonify, request, send_file
 import six
 
 from flask.views import MethodView
@@ -156,3 +157,62 @@ class LogbookView(MethodView):
             response, status_code = CustomAPIException.check_exception(ex, function_name, internal_process)
             
         return response, status_code
+    
+    def get_generate_excel(self):
+        internal_process = (None, None)
+        function_name = "get_generate_excel"
+        response = {}
+        status_code = 500
+        try:
+            if connexion.request.headers:
+                start_time = default_timer()
+                internal_transaction_id = str(generate_internal_transaction_id())
+                external_transaction_id = request.headers.get('externalTransactionId')
+                internal_process = (internal_transaction_id, external_transaction_id)
+                response["internal_transaction_id"] = internal_transaction_id
+                response["external_transaction_id"] = external_transaction_id
+                message = f"start request: {function_name}, channel: {request.headers.get('channel')}"
+                logger.info(message, internal=internal_transaction_id, external=external_transaction_id)
+
+
+                datos = {
+                    "fecha": "01/10/2026",
+                    "localidad": "TAURA (TOTAL)",
+                    "puesto_control": "GARITA DE SEGURIDAD",
+                    "agente": "Juan Perez",
+                    "ref": "RP2026-010",
+                    "hora": "19:00",
+                    "items": [
+                        {
+                            "salida_cant": 0,
+                            "salida_unidad": "LIBRAS",
+                            "entrada_cant": 0,
+                            "entrada_unidad": "LIBRAS"
+                        },
+                        {
+                            "salida_cant": 0,
+                            "salida_unidad": "GALONES",
+                            "entrada_cant": 1980,
+                            "entrada_unidad": "GALONES"
+                        }
+                    ]
+                }
+                
+                BASE_DIR = os.path.dirname(os.path.abspath(__file__))
+                output = os.path.join(
+                    BASE_DIR,
+                    "..",
+                    "template_report.xlsx"
+                )
+                self.logbook_use_case.generar_excel(datos, output)
+                # response["error_code"] = 0
+                # response["message"] = "Unidades de peso obtenidas correctamente"
+                # response["data"] = results
+                end_time = default_timer()
+                logger.info(f"Fin de la transacción, procesada en : {end_time - start_time} milisegundos",
+                            internal=internal_transaction_id, external=external_transaction_id)
+                status_code = 200
+        except Exception as ex:
+            response, status_code = CustomAPIException.check_exception(ex, function_name, internal_process)
+            
+        return send_file(output, as_attachment=True)
